--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   date_picker_timeline: ^1.2.6
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.12
   gap: ^3.0.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
